# baitak

./: .gitignore  .pre-commit-config.yaml  __init__.py  main.py  pyproject.toml  qualityChecks.bash  remixed-b1b16beb.tsx  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
app/routers/: __init__.py  apartments.py  auth.py  otp.py  rooms.py  stats.py  tenants.py
app/services/: whatsapp.py
baitak_app/: README.md  pubspec.yaml
baitak_app/android/app/: build.gradle.kts
baitak_app/ios/Runner/: Info.plist
baitak_app/ios/Runner.xcodeproj/: project.pbxproj
baitak_app/lib/: main.dart
baitak_app/lib/core/models/: apartment.dart  otp.dart  stats.dart  tenant.dart  user.dart
baitak_app/lib/core/network/: api_client.dart  api_exception.dart  auth_events.dart
baitak_app/lib/core/router/: router.dart
baitak_app/lib/core/theme/: colors.dart  theme.dart
baitak_app/lib/core/utils/: phone_utils.dart
baitak_app/lib/core/widgets/: shimmer_widgets.dart
baitak_app/lib/features/shell/: app_shell.dart
baitak_app/linux/: CMakeLists.txt
baitak_app/linux/runner/: my_application.cc
baitak_app/macos/Runner.xcodeproj/: project.pbxproj
baitak_app/macos/Runner/Configs/: AppInfo.xcconfig
baitak_app/test/: widget_test.dart
baitak_app/web/: index.html  manifest.json
baitak_app/windows/: CMakeLists.txt
baitak_app/windows/runner/: Runner.rc  main.cpp
migrations/: env.py
migrations/versions/: 001_add_users_phone_and_otp_codes.py
scripts/: seed.py
(+26 files in other folders)
