[project]
name = "baitak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "fastapi==0.135.1",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "pre-commit==4.5.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "sqlalchemy==2.0.48",
    "uvicorn==0.41.0",
]
