[project]
name = "baitak"
version = "0.1.0"
description = "Baitak — shared apartment rental management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "asyncpg==0.31.0",
    "aiosqlite==0.21.0",
    "fastapi==0.135.1",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "pre-commit==4.5.1",
    "pydantic==2.12.5",
    "email-validator==2.3.0",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.22",
    "sqlalchemy==2.0.48",
    "uvicorn==0.41.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends() calls in defaults are intentional

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
